# JobTool

./: .env.example  .gitignore  Dockerfile  README.md  crop_perfect.py  render.yaml  run_jobtool.bat  run_jobtool.vbs
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  applications.py  auth.py  filters.py  pipeline.py  resume.py  settings_api.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/llm/: __init__.py  prompts.py  provider.py
backend/app/pipeline/: __init__.py  orchestrator.py  pdf_generator.py
backend/app/resume/: __init__.py  parser.py
backend/app/sources/: __init__.py  adzuna.py  arbeitnow.py  ashby.py  base.py  company_lists.py  dedup.py  greenhouse.py  jobspy_scraper.py  lever.py  remoteok.py  themuse.py
frontend/: next.config.mjs
frontend/app/: globals.css  layout.js  page.js
frontend/app/applications/: page.js
frontend/app/applications/[id]/: page.js
frontend/app/components/: AuthLayout.js  Sidebar.js
frontend/app/filters/: page.js
frontend/app/lib/: api.js
frontend/app/login/: page.js
frontend/app/pipeline/: page.js
frontend/app/resume/: page.js
frontend/app/settings/: page.js
