[project]
name = "jobtool-backend"
version = "0.1.0"
description = "Cloud-hosted job application pipeline backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Document parsing
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    
    # PDF generation
    "weasyprint>=62.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # LLM providers
    "google-generativeai>=0.8.0",
    "groq>=0.9.0",
    "openai>=1.40.0",           # For DeepSeek (OpenAI-compatible API)
    
    # Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    
    # Utilities
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "thefuzz>=0.22.0",          # Fuzzy string matching for dedup
    "jinja2>=3.1.0",            # HTML templates for PDF generation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx",                     # For TestClient
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
